--- a/examples/index.html
+++ b/examples/index.html
@@ -7721,6 +7721,16 @@ var _user$project$Main$view = function (model) {
 			]),
 		_elm_lang$core$Native_List.fromArray(
 			[
+				A2(
+				_elm_lang$html$Html$a,
+				_elm_lang$core$Native_List.fromArray(
+					[
+						_elm_lang$html$Html_Attributes$href('https://github.com/avh4/elm-debug-controls/')
+					]),
+				_elm_lang$core$Native_List.fromArray(
+					[
+						_elm_lang$html$Html$text('https://github.com/avh4/elm-debug-controls/')
+					])),
 				h('Interactive control'),
 				_user$project$Controls$view(model),
 				showData(
