--- a/examples/index.html
+++ b/examples/index.html
@@ -7743,7 +7743,23 @@ var _user$project$Main$view = function (model) {
 				A2(
 					_elm_lang$core$List$map,
 					showData,
-					_user$project$Controls$allValues(model)))
+					_user$project$Controls$allValues(model))),
+				A2(
+				_elm_lang$html$Html$hr,
+				_elm_lang$core$Native_List.fromArray(
+					[]),
+				_elm_lang$core$Native_List.fromArray(
+					[])),
+				A2(
+				_elm_lang$html$Html$a,
+				_elm_lang$core$Native_List.fromArray(
+					[
+						_elm_lang$html$Html_Attributes$href('https://github.com/avh4/elm-debug-controls/blob/master/examples/LICENSE.md#images')
+					]),
+				_elm_lang$core$Native_List.fromArray(
+					[
+						_elm_lang$html$Html$text('Image credits')
+					]))
 			]));
 };
 var _user$project$Main$def2 = _user$project$Controls$choice(
